--- a/homelab-haproxy/roles/template/templates/haproxy.cfg.j2
+++ b/homelab-haproxy/roles/template/templates/haproxy.cfg.j2
@@ -1,55 +1,39 @@
 global
-        log /dev/log    local0
-        log /dev/log    local1 notice
-        chroot /var/lib/haproxy
-        stats socket /run/haproxy/admin.sock mode 660 level admin expose-fd listeners
-        stats timeout 30s
-        user haproxy
-        group haproxy
-        daemon
-
-        # Default SSL material locations
-        ca-base /etc/ssl/certs
-        crt-base /etc/ssl/private
-
-        # Default ciphers to use on SSL-enabled listening sockets.
-        # For more information, see ciphers(1SSL). This list is from:
-        #  https://hynek.me/articles/hardening-your-web-servers-ssl-ciphers/
-        # An alternative list with additional directives can be obtained from
-        #  https://mozilla.github.io/server-side-tls/ssl-config-generator/?server=haproxy
-        ssl-default-bind-ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:RSA+AESGCM:RSA+AES:!aNULL:!MD5:!DSS
-        ssl-default-bind-options no-sslv3
+    # global settings here
+    maxconn 50000
+    log /dev/log local0
+    user haproxy
+    group haproxy
+    stats socket /run/haproxy/admin.sock user haproxy group haproxy mode 660 level admin
+    nbproc 2
+    nbthread 4
+    cpu-map auto:1/1-4 0-3
+    ssl-default-bind-ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
+    ssl-default-bind-options ssl-min-ver TLSv1.2 no-tls-tickets
 
 defaults
-        log     global
-        mode    http
-        option  httplog
-        option  dontlognull
-        timeout connect 5000
-        timeout client  50000
-        timeout server  50000
-        errorfile 400 /etc/haproxy/errors/400.http
-        errorfile 403 /etc/haproxy/errors/403.http
-        errorfile 408 /etc/haproxy/errors/408.http
-        errorfile 500 /etc/haproxy/errors/500.http
-        errorfile 502 /etc/haproxy/errors/502.http
-        errorfile 503 /etc/haproxy/errors/503.http
-        errorfile 504 /etc/haproxy/errors/504.http
+    # defaults here
+    timeout connect 10s
+    timeout client 30s
+    timeout server 30s
+    log global
+    mode http
+    option httplog
+    maxconn 3000
 
-frontend http_balancer
-    bind 192.168.0.100:80
-    option http-server-close
-    option forwardfor
-    stats uri /haproxy?stats
+frontend emby_frontend
+    # a frontend that accepts requests from clients
+    bind *:8096
+    #bind 10.0.0.3:443 ssl crt /etc/ssl/certs/mysite.pem
+    #http-request redirect scheme https unless { ssl_fc }
+    #use_backend api_servers if { path_beg /api/ }
+    default_backend emby_server
 
-#    acl url_static       path_beg       -i /static /images /javascript /stylesheets
-#    acl url_static       path_end       -i .jpg .gif .png .css .js
-#    use_backend static          if url_static
-    default_backend     nginx_webservers
-
-backend nginx_webservers
-    mode        http
-    balance     roundrobin
-    option httpchk HEAD / HTTP/1.1\r\nHost:\ localhost    
-    server  nginx-node01  192.168.1.11:80  check
-    server  nginx-node02  192.168.1.12:80  check
+backend emby_server
+    # servers that fulfill the requests
+    #balance roundrobin
+    #cookie SERVERUSED insert indirect nocache
+    #option httpchk HEAD /
+    default-server check maxconn 20
+    server server1 10.10.10.55:8096 cookie server1
+    {# server server2 10.0.1.4:80 cookie server2 #}
