--- a/homelab-haproxy/roles/template/templates/haproxy.cfg.j2
+++ b/homelab-haproxy/roles/template/templates/haproxy.cfg.j2
@@ -37,3 +37,15 @@ backend emby_server
     default-server check maxconn 20
     server server1 10.10.10.55:8096 cookie server1
     {# server server2 10.0.1.4:80 cookie server2 #}
+
+frontend portainer_frontend
+    # a frontend that accepts requests from clients
+    bind *:9000
+    #bind 10.0.0.3:443 ssl crt /etc/ssl/certs/mysite.pem
+    #http-request redirect scheme https unless { ssl_fc }
+    #use_backend api_servers if { path_beg /api/ }
+    default_backend portainer_server
+
+backend portainer_server
+    default-server check maxconn 20
+    server server1 10.10.10.55:9000
